[package]
name = "crowdfunding"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdfunding"

[features]
default = ["no-idl"]
no-idl = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
bytemuck_derive = "1.10.2"

[patch.crates-io]
indexmap = "=2.11.4"

